final fix on small screens

--- a/client/src/components/dashboard/Dashboard.css
+++ b/client/src/components/dashboard/Dashboard.css
@@ -20,8 +20,16 @@
     height: 20px;
 }
 
+.valign-wrapper{
+    height: 50vh;
+}
+
 @media (max-width: 390px) {
     .btn-flat {
         font-size: 11px;
+    }
+
+    .valign-wrapper{
+        height: 60vh;
     }
 }
